fixing the alignement

--- a/identity/ui/css/style.scss
+++ b/identity/ui/css/style.scss
@@ -1,6 +1,6 @@
 @import "var";
 html {
-	font-size: 100%;
+	font-size: 16px;
 	// @media (max-width:767px) {
 	// 	font-size: 50%;
 	// 	}
@@ -15,7 +15,6 @@ html {
 	* {
 		font-family: "Noto Sans", sans-serif;
 	}
-	font-size: 16px;
 }
 p {
 	font-size: 1.563rem;
@@ -538,7 +537,7 @@ p {
 			padding: 5%;
 			display: flex;
 			flex-direction: column;
-			align-items: end;
+			align-items: start;
 			@media (max-width: 640px) {
 				flex-direction: column;
 				max-width: 100%;
